--- a/cef-minimal-obs-bin/PKGBUILD
+++ b/cef-minimal-obs-bin/PKGBUILD
@@ -7,7 +7,7 @@ _commit="17f8588"
 _cefbranch="5060"
 _chromiumver="103.0.${_cefbranch}.134"
 _rebuild="1" # The tarball sometime can get rebuild by OBS Project
-pkgver="${_version}+g${_commit}+chromium_${_chromiumver}_${_rebuild}"
+pkgver="${_version}_g${_commit}_chromium_${_chromiumver}_${_rebuild}"
 pkgrel=1
 epoch=1
 pkgdesc="Chromium Embedded Framework minimal release needed by OBS Studio release in /opt/cef-obs"
